<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="522dp"
        android:layout_height="456dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:srcCompat="@drawable/brain" />

    <TextView
        android:id="@+id/meds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Progress"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/food_text"
        android:layout_width="234dp"
        android:layout_height="84dp"
        android:text="@string/Food"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meds_text" />

    <TextView
        android:id="@+id/sleep_text"
        android:layout_width="375dp"
        android:layout_height="84dp"
        android:text="@string/Sleep"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_text" />

    <TextView
        android:id="@+id/back_text"
        android:layout_width="152dp"
        android:layout_height="73dp"
        android:text="@string/Back"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_text" />

</androidx.constraintlayout.widget.ConstraintLayout>